--- a/HomeWork21.06_braicov_p52ex2.ipynb
+++ b/HomeWork21.06_braicov_p52ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "a692ff3a",
    "metadata": {},
    "outputs": [
@@ -10,29 +10,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "27\n"
+      "320\n",
+      "31\n"
      ]
     }
    ],
    "source": [
-    "multiplication = 1   \n",
-    "             \n",
-    "tup = [23, 2 ,0 ,2 ]\n",
+    "#Кортежи (tuple)\n",
+    "#Se dă un vector n (1<=n<=100) componente numere întregi.\n",
+    "#Să se calculeze suma și produsul componentelor vectorului\n",
+    "\n",
+    "multiplication = 1           \n",
+    "tup = tuple([20, 8 ,1 ,2 ])\n",
     "for x in tup:\n",
     "    multiplication *= x\n",
     "addition = sum(tup)\n",
     "print(multiplication)\n",
     "print(addition)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97b9fdf8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
