--- a/HomeWork21.06_braicov_p52ex2.ipynb
+++ b/HomeWork21.06_braicov_p52ex2.ipynb
@@ -21,7 +21,7 @@
     "#Să se calculeze suma și produsul componentelor vectorului\n",
     "\n",
     "multiplication = 1           \n",
-    "tup = tuple([20, 8 ,1 ,2 ])\n",
+    "tup = (20, 8 ,1 ,2)\n",
     "for x in tup:\n",
     "    multiplication *= x\n",
     "addition = sum(tup)\n",
